fix(basic-2.2): add Html5 DOCTYPE tag

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
-<HEAD>
-    <title>Todo App</title>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
-</HEAD>
+    <title>Todo App</title>
+</head>
 
 <body>
     <div class="aaa">
