--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" type="text/css" MEDIA="screen" charset="utf-8">
     <title>Todo App</title>
 </head>
@@ -16,17 +16,17 @@
         </a>
     </div>
     <div class="centered-main-page-element">
-        <p id='topSectionForAddingElementToList'>
+        <p id="topSectionForAddingElementToList">
             <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-            <input id='new-task' class="task" type="text">
+            <input id="new-task" class="task" type="text">
             <button>Add</button>
         </div>
         </p>
         <h3>Todo</h3>
-        <ul id='incompleteTasks'>
+        <ul id="incompleteTasks">
             <li>
-                <input type='checkbox'>
+                <input type="checkbox">
                 <label class="task">Pay Bills</label>
                 <input type="text" class="task">
                 <button class="edit">Edit</button>
@@ -38,7 +38,7 @@
                 <input type="checkbox">
                 <label class="task">Go Shopping</label>
                 <input type="text" value="Go Shopping" class="task">
-                <button class='edit'>Save</button>
+                <button class="edit">Save</button>
                 <button class="delete">
                     <img src="./remove.svg">
                 </button>
